+ General adjustments.